# vsss-rs

./: Cargo.toml  README.md  lints.toml  rustfmt.toml
src/: curve25519.rs  lib.rs  secp256k1.rs
src/no_std/: feldman.rs  pedersen.rs  shamir.rs  share.rs
src/no_std/verifier/: feldman.rs  pedersen.rs
src/standard/: feldman.rs  pedersen.rs  polynomial.rs  shamir.rs
src/standard/verifier/: feldman.rs  pedersen.rs
src/tests/no_std/: bls12_381_tests.rs  curve25519_tests.rs  k256_tests.rs  p256_tests.rs  valid.rs
src/tests/standard/: bls12_381_tests.rs  curve25519_tests.rs  k256_tests.rs  p256_tests.rs  valid.rs
